[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.0.3", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
thiserror = "1"
cosmwasm-schema = "2.0.3"
pairing_ce = "0.28.5"

[dev-dependencies]
cw-multi-test = "2.0.1"
